--- a/src/main/resources/templates/userCreate.html
+++ b/src/main/resources/templates/userCreate.html
@@ -14,8 +14,8 @@
     <input type = "text" th:field = "*{name}" id = "NickName"/>
     <br>
     <br>
-    <label for = "lastname"> Lastname:</label>
-    <input type = "text" th:field = "*{lastname}" id = "lastname"/>
+    <label for = "Lastname"> LastName:</label>
+    <input type = "text" th:field = "*{lastname}" id = "Lastname"/>
     <br>
     <br>
     <label for = "age"> Age:</label>
@@ -31,7 +31,7 @@
     <br>
     <br>
     <label>Role:
-        <select size="2" multiple name="roles" >
+        <select size="2" multiple name="role_id" >
             <option value="1">USER</option>
             <option selected="selected" value="2">ADMIN</option>
         </select>
