--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -16,7 +16,7 @@
         <td th:utext="${user.getName()}">name</td>
         <td th:utext="${user.getLastname()}">lastname</td>
         <td th:utext="${user.getAge()}">age</td>
-        <td th:utext="${user.getEmail()()}">email</td>
+        <td th:utext="${user.getEmail()}">email</td>
     </tr>
 </table>
 <br>
