--- a/src/main/resources/templates/userUpdate.html
+++ b/src/main/resources/templates/userUpdate.html
@@ -34,7 +34,7 @@
         <br>
 
         <label>Role:
-            <select size="2" multiple name="roles" >
+            <select size="2" multiple name="role_id" >
                 <option value="1">ADMIN</option>
                 <option selected="selected" value="2">USER</option>
             </select>
