--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -19,7 +19,8 @@
         <td th:text="${user.getName()}"></td>
         <td th:text="${user.getLastname()}"></td>
         <td th:text="${user.getAge()}"></td>
-        <td th:text="${user.getEmail()()}"></td>
+        <td th:text="${user.getEmail()}"></td>
+        <td th:text="${user.getPassword()}"></td>
         <td >
             <form method="GET" th:action="@{/admin/{id}/update(id=${user.getId()})}">
                 <input type="submit" value="Update"/>
